WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31199
V8 bindings do not support SharedWorkers as event targets
https://bugs.webkit.org/show_bug.cgi?id=31199
Summary
V8 bindings do not support SharedWorkers as event targets
Andrew Wilson
Reported
2009-11-05 22:51:04 PST
V8DOMWrapper::convertEventTargetToV8Object() doesn't handle SharedWorkers currently, so we get a failed assertion if you ever try to send an event to a shared worker.
Attachments
proposed patch
(1.40 KB, patch)
2009-11-05 22:55 PST
,
Andrew Wilson
no flags
Details
Formatted Diff
Diff
fixed bug (was passing "null" as the target)
(1.41 KB, patch)
2009-11-05 22:58 PST
,
Andrew Wilson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andrew Wilson
Comment 1
2009-11-05 22:55:56 PST
Created
attachment 42631
[details]
proposed patch
Andrew Wilson
Comment 2
2009-11-05 22:58:46 PST
Created
attachment 42632
[details]
fixed bug (was passing "null" as the target)
WebKit Commit Bot
Comment 3
2009-11-06 08:18:50 PST
Comment on
attachment 42632
[details]
fixed bug (was passing "null" as the target) Clearing flags on attachment: 42632 Committed
r50600
: <
http://trac.webkit.org/changeset/50600
>
WebKit Commit Bot
Comment 4
2009-11-06 08:18:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug